--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>MAP PAC – Mise à jour</title>
+    <title>Map PAC - Complet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
